--- a/client/src/pages/ReduxBoard/ReduxBoard.module.scss
+++ b/client/src/pages/ReduxBoard/ReduxBoard.module.scss
@@ -2,8 +2,9 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	min-height: 100vh;
 
-  .title{
-    margin-top: 7vh;
-  }
+	.title {
+		margin-top: 7vh;
+	}
 }
