--- a/client/src/pages/BothBoard/BothBoard.module.scss
+++ b/client/src/pages/BothBoard/BothBoard.module.scss
@@ -4,13 +4,13 @@
 	gap: 15px;
 	min-height: 100vh;
 	background-color: #d1d1d1d1;
+	padding: 10px 20px;
 
-	& > button:first-child {
+	.actions {
 		grid-column-start: 1;
 		grid-column-end: 3;
-	}
-
-	& > div {
-		border: 2px solid black;
+		border: none;
+		display: flex;
+		justify-content: space-between;
 	}
 }
